# other/controllers/Author.js
@@ -1,7 +1,7 @@
 'use strict';
 
-var utils = require('../utils/writer.js');
-var Author = require('../service/AuthorService');
+const utils = require('../utils/writer.js');
+const Author = require('../service/AuthorService');
 
 module.exports.getAllAuthors = function getAllAuthors (req, res, next) {
   Author.getAllAuthors()
@@ -13,8 +13,9 @@ module.exports.getAllAuthors = function getAllAuthors (req, res, next) {
     });
 };
 
+
 module.exports.getAuthorByFullName = function getAuthorByFullName (req, res, next) {
-  var authorFullName = req.swagger.params['authorFullName'].value;
+  const authorFullName = req.swagger.params['authorFullName'].value;
   Author.getAuthorByFullName(authorFullName)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -22,4 +23,16 @@ module.exports.getAuthorByFullName = function getAuthorByFullName (req, res, nex
     .catch(function (response) {
       utils.writeJson(res, response);
     });
+};
+
+
+module.exports.getAuthorsOfABook = function getAuthorsOfABook(req, res, next) {
+  const isbn = req.swagger.params['isbn'].value;
+  Author.getAuthorsOfABook(isbn)
+      .then(function (response) {
+        utils.writeJson(res, response);
+      })
+      .catch(function (response) {
+        utils.writeJson(res, response);
+      });
 };
