# other/controllers/User.js
@@ -1,11 +1,11 @@
 'use strict';
 
-var utils = require('../utils/writer.js');
-var User = require('../service/UserService');
+const utils = require('../utils/writer.js');
+const User = require('../service/UserService');
 
 module.exports.userLogin = function userLogin (req, res, next) {
-  var username = req.swagger.params['username'].value;
-  var password = req.swagger.params['password'].value;
+  const username = req.swagger.params['username'].value;
+  const password = req.swagger.params['password'].value;
   User.userLogin(username,password)
     .then(function (response) {
       utils.writeJson(res, response,200);
@@ -26,7 +26,7 @@ module.exports.userLogout = function userLogout (req, res, next) {
 };
 
 module.exports.userRegister = function userRegister (req, res, next) {
-  var body = req.swagger.params['body'].value;
+  const body = req.swagger.params['body'].value;
   User.userRegister(body)
     .then(function (response) {
       utils.writeJson(res, response,200);
